kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: three-body-rng-api
  namespace: ebisu-games-stg
  labels:
    app: three-body-rng-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: three-body-rng-api
